[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aiotorrent>=0.1.0",
    "diskcache>=5.6.3",
    "fastapi>=0.117.1",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "pydantic>=2.11.9",
    "ruff>=0.13.1",
    "six>=1.17.0",
    "urllib3>=1.26,<2.0",
    "uvicorn>=0.36.0",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

